--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,6 @@ html {
 }
 
 
-header {
-
-}
-
-
 h1 {
   font-size: 2rem;
   margin: 0;
@@ -182,13 +177,53 @@ img {
   background-color: rgba(145, 145, 145, .7);
 }
 
-.footer {
+
+
+/*FOOTER*/
+footer {
   background-color: #bac4b0;
 }
 
-.footer-nav {
-  text-align: right;
+footer p {
+  font-family: 'Lato', sans-serif;
+  font-size: 30px;
+  color: white;
 }
+
+footer a{
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: white;
+}
+
+form {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  width: 80%;
+  display: inline-block;
+  text-align: left;
+}
+
+form input, textarea{
+  background-color: transparent;
+}
+
+.btn{
+  background-color: transparent;
+  color: #5b6354;
+  border-color: #5b6354;
+}
+
+.btn:hover {
+  color: black;
+  background-color: grey;
+  border-color: black;
+}
+/*FOOTER END*/
 
 
 @media only screen and (min-width: 25em) {
