--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
         <input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
         <label class="nav-label" for="nav-check"><img src="{{site.baseurl}}/images/nav-icon.svg" alt="Open Navigation"></label>
         <ul class="nav list-group">
-          <li><a href="#">About</a></li>
           <li><a href="{{site.baseurl}}/#work">Work</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -46,29 +46,8 @@
 
 
 
-<footer id="contact" class="text-center">
-  <p class="pad-t-2">CONTACT ME</p>
-  <!--FORM-->
-  <form class="push-0" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
-    <div class="push">
-      <label for="name">NAME</label>
-      <input id="name" name="name" required>
-    </div>
-    <div class="push">
-      <label for="email">E-MAIL</label>
-      <input id="email" type="email" placeholder="hey@company.ca" name="email" required>
-    </div>
-    <div class="push">
-      <label for="details">What can I do for you?</label>
-      <textarea id="details" name="message" required></textarea>
-    </div>
-    <div>
-      <button class="btn btn-light" type="submit">SUBMIT</button>
-    </div>
-  </form>
-  <!--FORM END-->
-
-
+<footer class="text-center">
+<hr class="wrapper">
   <div class="icons text-right">
         <a href="#" class="">
           <i class="icon i-48 ">
