--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,11 @@ img {
   background-color: rgba(145, 145, 145, .7);
 }
 
+.image-pad {
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 3rem;
+}
 
 
 /*FOOTER*/
