--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <header>
     <div class="grid grid-middle pad-t-1-2 pad-b-1-2 gutter-half">
       <div class="masthead unit xs-1 s-1 m-1 l-1-2">
-        <h1>Jaimie Porter</h1>
+        <h1><a href="{{site.baseurl}}/index">Jaimie Porter</a></h1>
       </div>
 
       <nav class="unit xs-1 s-1 m-1 l-1-2">
@@ -35,7 +35,7 @@
         <ul class="nav list-group">
           <li><a href="{{site.baseurl}}/#work">Work</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+          <li><a href="{{site.baseurl}}/contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -47,18 +47,18 @@
 
 
 <footer class="text-center">
-<hr class="wrapper">
-  <div class="icons text-right">
-        <a href="#" class="">
-          <i class="icon i-48 ">
-            <svg><use xlink:href="{{site.baseurl}}/images/social.svg#social-instagram" /></svg>
-          </i>
-        </a>
-
-        <a href="#" class="">
-          <i class="icon i-48">
-            <svg><use xlink:href="{{site.baseurl}}/images/social.svg#social-facebook" /></svg>
-          </i>
-        </a>
-      </div>
+  <div class="grid footer-content">
+    <p class="unit s-2-3">&copy; 2018 jaimiegraphics.ca</p>
+    <div class="unit s-1-3 icons text-right">
+      <a href="https://www.instagram.com/jaimie.graphics/" class="icon i-24">
+        <img src="{{site.baseurl}}/images/icons-instagram.svg">
+      </a>
+      <a href="https://vimeo.com/user56681087" class="icon i-24">
+        <img src="{{site.baseurl}}/images/icons-vimeo.svg">
+      </a>
+      <a href="https://www.behance.net/port0203c483" class="icon i-24">
+        <img src="{{site.baseurl}}/images/icons-behance.svg">
+      </a>
+    </div>
+  </div>
 </footer>
