--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h1 {
 
 
 
-
+/*NAV*/
 .nav {
   display: none;
   text-align: right;
@@ -87,7 +87,9 @@ ul {
   background-color: #C4CEB9;
 }
 
-
+.portfolio-piece {
+  box-shadow: 10px 10px 5px grey;
+}
 
 
 h2 {
@@ -97,6 +99,7 @@ h2 {
   font-size: 4rem;
   display: inline-block;
   line-height: normal;
+  margin: 1rem;
 }
 
 h3 {
@@ -129,7 +132,7 @@ h3 {
 }
 
 
-
+/*BANNER*/
 .banner {
   position: relative;
   background-size: cover;
@@ -160,7 +163,7 @@ img {
   max-width: 100%;
 }
 
-
+/*Cards*/
 .card {
   position: relative;
   transition: all 500ms linear;
@@ -178,31 +181,51 @@ img {
 }
 
 .image-pad {
-  padding-left: 3rem;
-  padding-right: 3rem;
   padding-bottom: 3rem;
 }
 
 
+
 /*FOOTER*/
-footer {
-  background-color: #bac4b0;
-}
-
 footer p {
-  font-family: 'Lato', sans-serif;
-  font-size: 30px;
-  color: white;
+  text-align: left;
+  padding-left: 4rem;
+  color: #1E1E1E;
 }
 
-footer a{
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  text-decoration: none;
+footer {
+  border-top: 1px solid black;
 }
 
-footer a:hover {
-  color: white;
+.footer-content {
+  padding-top: .2rem;
+  padding-bottom: 2rem;
+}
+
+.icons {
+  padding-top: .3rem;
+  padding-right: 4rem;
+}
+
+.icon {
+padding-left: 2rem;
+display: block;
+float: right;
+}
+
+/*Form*/
+
+.contact {
+  background-color: #C4CEB9;
+}
+
+.contact-me {
+  background-color: #C4CEB9;
+  padding-bottom: 3rem;
+}
+
+.contact-me h3 {
+  padding-bottom: 2rem;
 }
 
 form {
@@ -228,7 +251,6 @@ form input, textarea{
   background-color: grey;
   border-color: black;
 }
-/*FOOTER END*/
 
 
 @media only screen and (min-width: 25em) {
