--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,8 @@ form {
   width: 80%;
   display: inline-block;
   text-align: left;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 form input, textarea{
