--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,8 +48,8 @@
 
 <footer class="text-center">
   <div class="grid footer-content">
-    <p class="unit s-2-3">&copy; 2018 jaimiegraphics.ca</p>
-    <div class="unit s-1-3 icons text-right">
+    <p class="unit xs-1-2">&copy; 2018 jaimiegraphics.ca</p>
+    <div class="unit xs-1-2 icons text-right">
       <a href="https://www.instagram.com/jaimie.graphics/" class="icon i-24">
         <img src="{{site.baseurl}}/images/icons-instagram.svg">
       </a>
