--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,19 @@ form input, textarea{
 }
 
 
-@media only screen and (min-width: 25em) {
+@media only screen and (min-width: 15em) {
+
+  footer p {
+    text-align: left;
+    padding-left: 1rem;
+  }
+
+  .icons {
+    padding-top: .3rem;
+    padding-right: 1rem;
+    text-align: right;
+  }
+
 
 
 }
