trying the carousel

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,22 @@ h1 {
   margin-bottom: 1rem;
 }
 
+h6 {
+  margin-bottom: 0;
+}
+
+li {
+  margin-left: 10px;
+}
+
+.list ul {
+  padding-bottom: 3rem;
+}
+
+iframe {
+  padding-bottom: 1.4rem;
+}
+
 .masthead {
   height: 4rem;
   display: block;
@@ -61,7 +77,7 @@ a {
 ul {
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .nav-check {
@@ -116,12 +132,6 @@ h3 {
   background-color: #C4CEB9;
 }
 
-
-.text {
-  display: inline-block;
-  text-align: center;
-}
-
 .content {
   text-align: center;
 }
@@ -139,18 +149,39 @@ h3 {
   opacity: 0.2;
   width: 40%;
   display: inline-block;
+}
+
+.text {
+  display: inline-block;
+  text-align: center;
+}
+
+.text2 {
+  display: inline-block;
+  text-align: center;
+  padding: 3rem;
+}
+
+.imagebanner {
   position: absolute;
 }
 
-
-.banner {
-  background-size: cover;
-  background-position: center;
+.banner-large {
   overflow: hidden;
   width: 100%;
   display: block;
   background-color: #C4CEB9;
   text-align: center;
+  display: none
+}
+
+.banner-small {
+  overflow: hidden;
+  width: 100%;
+  display: block;
+  background-color: #C4CEB9;
+  text-align: center;
+  display: block;
 }
 
 .content {
@@ -263,6 +294,12 @@ form input, textarea{
 }
 
 
+
+
+
+
+
+
 @media only screen and (min-width: 15em) {
 
   .text {
@@ -310,6 +347,14 @@ form input, textarea{
     padding-top: .3rem;
     padding-right: 3rem;
     text-align: right;
+  }
+
+  .banner-large {
+    display: block;
+  }
+
+  .banner-small {
+    display: none;
   }
 
 }
