--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,9 @@
   <meta charset="utf-8">
   <title>Coming Soon</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="{{site.baseurl}}/css/modules.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/type.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-  
+
 </head>
 
 
@@ -49,7 +46,7 @@
 
 <footer class="text-center">
   <div class="grid footer-content">
-    <p class="unit xs-1-2">&copy; 2018 jaimiegraphics.ca</p>
+    <p class="milli unit xs-1-2">&copy; 2018 jaimiegraphics.ca</p>
     <div class="unit xs-1-2 icons text-right">
       <a href="https://www.instagram.com/jaimie.graphics/" class="icon i-24">
         <img src="{{site.baseurl}}/images/icons-instagram.svg">
