--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,12 @@ html {
   box-sizing: inherit;
 }
 
+body {
+ background-image:  url('../images/leaf.jpg');
+ background-repeat:  no-repeat;
+ background-attachment: fixed;
+ background-size: cover;
+}
 
 h1 {
   font-size: 2rem;
@@ -49,6 +55,10 @@ iframe {
   color: white;
   font-weight: 200;
   font-family: "Proxima Nova";
+}
+
+header {
+  background-color: #bac4b0;
 }
 
 h1 a {
@@ -145,7 +155,7 @@ h3 {
 }
 
 .picture {
-  max-width: 100%
+  max-width: 100%;
 }
 
 .me {
@@ -220,7 +230,9 @@ img {
   background-color: rgba(145, 145, 145, .7);
 }
 
-
+.empty{
+  height: 60vh;
+}
 
 /*FOOTER*/
 footer p {
