--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,13 @@ html {
   box-sizing: inherit;
 }
 
+
 body {
- background-image:  url('../images/leaf.jpg');
+ background-image:  url('../images/ue4.png');
  background-repeat:  no-repeat;
  background-attachment: fixed;
- background-size: cover;
+ background-size: contain;
+
 }
 
 h1 {
@@ -178,6 +180,7 @@ h3 {
   display: inline-block;
   text-align: center;
   padding: 3rem;
+  position: relative;
 }
 
 .imagebanner {
@@ -485,7 +488,7 @@ body {font-family: Verdana,sans-serif;margin:0}
   }
 
   .banner {
-    display: block;
+    display: flex;
   }
 
   .banner-small {
