--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ html {
 
 
 body {
- background-image:  url('../images/ue4.png');
+ background-image:  url();
  background-repeat:  no-repeat;
  background-attachment: fixed;
  background-size: contain;
@@ -174,12 +174,13 @@ h3 {
 
 .photo {
   opacity: 0.9;
+  display: block;
+  width: 100%;
 }
 
 .text2 {
   display: inline-block;
   text-align: center;
-  padding: 3rem;
   position: relative;
 }
 
