--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,23 +9,13 @@
 </head>
 
 
-  <ul class="skip-links">
-    <li>
-      <a href="#main">Jump to main content</a>
-    </li>
-    <li>
-      <a href="#nav">Jump to navigation</a>
-    </li>
-  </ul>
+<header class="">
+  <a href="{{site.baseurl}}/">
+    <img class="logo" src="{{site.baseurl}}/images/name5.png" alt="">
+  </a>
+  </div>
+</header>
 
-
-  <header>
-    <div class="grid grid-middle pad-t-1-2 pad-b-1-2 gutter-half">
-      <div class="masthead unit xs-1 s-1 m-1 l-1-2">
-        <h1><a href="{{site.baseurl}}/index">Jaimie Porter</a></h1>
-      </div>
-    </div>
-  </header>
 
 
 {{content}}
