--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
 
 <header class="">
-  <a href="{{site.baseurl}}/">
+  <a class="inline-block" href="{{site.baseurl}}/">
     <img class="logo" src="{{site.baseurl}}/images/name5.png" alt="">
   </a>
   </div>
