--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ h3 {
 
 .workbody h3 {
   margin-bottom: 0;
+
 }
 
 .workbody {
@@ -153,6 +154,12 @@ h3 {
 
 .content {
   text-align: center;
+}
+
+.back {
+  padding-left: 1.5rem;
+  padding-top: 1.5rem;
+  color: grey;
 }
 
 
