added in the DRBIA to the website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
 <footer class="text-center">
   <div class="grid footer-content">
-    <p class=" unit xs-1-2">&copy; 2019 Jaimie Porter</p>
+    <p class=" unit xs-1-2">&copy; 2020 Jaimie Porter</p>
     <div class="unit xs-1-2 icons text-right">
       <a href="https://www.instagram.com/jaimie.graphics/" class="icon i-24">
         <img src="{{site.baseurl}}/images/icons-instagram.svg">
@@ -32,9 +32,9 @@
       <a href="https://vimeo.com/user56681087" class="icon i-24">
         <img src="{{site.baseurl}}/images/icons-vimeo.svg">
       </a>
-      <a href="https://www.behance.net/port0203c483" class="icon i-24">
+      <!-- <a href="https://www.behance.net/port0203c483" class="icon i-24">
         <img src="{{site.baseurl}}/images/icons-behance.svg">
-      </a>
+      </a> -->
     </div>
   </div>
 </footer>
