New layout and style for most pages. Added in play page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,29 @@
 
 
 <header class="">
-  <a class="inline-block" href="{{site.baseurl}}/">
-    <img class="logo" src="{{site.baseurl}}/images/name5.png" alt="">
-  </a>
-  </div>
+    <a class="logo inline-block unit xs-1" href="{{site.baseurl}}/">
+      <img class="" src="{{site.baseurl}}/images/name5.png" alt="">
+    </a>
+    <div class="nav unit xs-1">
+      <ul class="list-group-inline">
+        <li class="island-1-8">
+          <a class="block text-center  pad-t-1-4 pad-b-1-4 milli" href="{{site.baseurl}}/">WORK</a>
+        </li>
+        <li class="island-1-8">
+          <a class="block text-center  pad-t-1-4 pad-b-1-4 milli" href="play">PLAY</a>
+        </li>
+        <li class="island-1-8">
+          <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="#contact">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+    <!-- <div class="unit xs-1 bottom-nav">
+      <ul class="list-group-inline push-0 bottom-nav">
+        <li><a href="{{site.baseurl}}/">WORK</a></li>
+        <li><a href="play">PLAY</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div> -->
 </header>
 
 
