--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ h1 {
   display: inline-block;
   line-height: normal;
   margin: 1rem;
+  text-align: center;
 }
 
 h6 {
@@ -148,6 +149,8 @@ h3 {
   margin: 1rem;
   color: #282828;
   letter-spacing: 2px;
+  text-align: center; 
+
 }
 
 h4 {
