added DWS page and more fun items

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
@@ -16,10 +17,10 @@
     <div class="nav unit xs-1">
       <ul class="list-group-inline">
         <li class="island-1-8">
-          <a class="block text-center  pad-t-1-4 pad-b-1-4 milli" href="{{site.baseurl}}/">WORK</a>
+          <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="{{site.baseurl}}/">WORK</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center  pad-t-1-4 pad-b-1-4 milli" href="play">PLAY</a>
+          <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="play">PLAY</a>
         </li>
         <li class="island-1-8">
           <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="#contact">CONTACT</a>
