more updates to the play page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="nav unit xs-1">
       <ul class="list-group-inline">
         <li class="island-1-8">
-          <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="#work">WORK</a>
+          <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="{{site.baseurl}}/">WORK</a>
         </li>
         <li class="island-1-8">
           <a class="block text-center pad-t-1-4 pad-b-1-4 milli" href="play">PLAY</a>
