--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ ul {
 
 .pieces {
   background-color: #C4CEB9;
+  /* background-color: #f1f1f1; */
 }
 
 .portfolio-piece {
@@ -149,7 +150,7 @@ h3 {
   margin: 1rem;
   color: #282828;
   letter-spacing: 2px;
-  text-align: center; 
+  text-align: center;
 
 }
 
@@ -164,6 +165,7 @@ h4 {
 
 .workbody {
   background-color: #C4CEB9;
+  /* background-color: #f1f1f1; */
 }
 
 .content {
@@ -252,13 +254,13 @@ h4 {
 p {
   color: black;
   margin: 0;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 1.1rem;
+  line-height: 24px;
 }
 
 ul {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .multi p {
